--- a/templates/jupyter-spark/0/docker-compose.yml
+++ b/templates/jupyter-spark/0/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "2"
 services:
-  mautic:
+  jupyter:
     image: jupyter/all-spark-notebook
     ports:
-      - "{PORT}:8888"
+      - ${PORT}":8888"
     environment:
       PASSWORD: ${PASSWORD}
       name: ${USER}
