--- a/templates/jupyter-spark/0/docker-compose.yml
+++ b/templates/jupyter-spark/0/docker-compose.yml
@@ -5,8 +5,12 @@ services:
     ports:
       - ${PORT}:8888
     environment:
-      PASSWORD: ${PASSWORD}
-      name: ${USER}
+      GEN_CERT: "yes"
+      GRANT_SUDO: "yes"
+    command:
+       start-notebook.sh
+       --NotebookApp.password='sha1:29b153b69808:47e29b2173113ba478368371cc7efef05bc5068a' //password: hola
+      
 
 #    volumes:
 #      - db_data_mautic:/var/lib/mysql
