--- a/templates/jupyter-spark/0/docker-compose.yml
+++ b/templates/jupyter-spark/0/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       GEN_CERT: "yes"
       GRANT_SUDO: "yes"
     command:
-       start-notebook.sh --NotebookApp.token='${TOKEN}' 
+       openssl req -x509 -newkey rsa:4096 -subj '/CN=eltitopera.zapto.org' -keyout /etc/ssl/notebook/notebook.key -out /etc/ssl/notebook/notebook.crt -days 365
+       start-notebook.sh --NotebookApp.token='${TOKEN}'--NotebookApp.keyfile=/etc/ssl/notebook/notebook.key --NotebookApp.certfile=/etc/ssl/notebook/notebook.crt
     volumes:
       - data:/home/jovyan
 
