--- a/templates/tensorflow/0/rancher-compose.yml
+++ b/templates/tensorflow/0/rancher-compose.yml
@@ -1,7 +1,15 @@
 .catalog:
-  name: # Name of the versioned template of the Catalog Entry
-  version: # Version of the versioned template of the Catalog Entry
-  description: # Description of the versioned template of the Catalog Entry
-  uuid: # Unique identifier to be used for upgrades. Please see note.
-  minimum_rancher_version: # The minimum version of Rancher that supports the template
-  questions: #Used to request user input for configuration options
+  name: Jupyter - Tensorflow 
+  version: 0.1
+  description: Jupyter + Tensorflow
+  uuid: Jupyter-Tensorflow-0
+  minimum_rancher_version: v0.46.0
+  questions: 
+    - variable: PORT
+      default: 8888
+      label: Public port
+      required: true
+    - variable: TOKEN
+      label: Token
+      required: true
+      type: password
