--- a/templates/zeppelin/config.yml
+++ b/templates/zeppelin/config.yml
@@ -1,8 +1,8 @@
-name: # Name of the Catalog Entry
+name: Zeppelin
 description: |
-  # Description of the Catalog Entry
-version: # Version of the Catalog to be used
-category: # Category to be used for searching catalog entries
-maintainer: # The maintainer of the catalog entry
-license: # The license
-projectURL: # A URL related to the catalog entry
+  Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more.
+version: 0.1
+category: data science
+maintainer: eltitopera
+license: Apache license
+projectURL: http://github.com/eltitopera/rancher-catalog
