--- a/templates/torrent/0/rancher-compose.yml
+++ b/templates/torrent/0/rancher-compose.yml
@@ -1,7 +1,15 @@
 .catalog:
-  name: # Name of the versioned template of the Catalog Entry
-  version: # Version of the versioned template of the Catalog Entry
-  description: # Description of the versioned template of the Catalog Entry
-  uuid: # Unique identifier to be used for upgrades. Please see note.
-  minimum_rancher_version: # The minimum version of Rancher that supports the template
-  questions: #Used to request user input for configuration options
+  name: Cloud Torrent
+  version: 0.1
+  description: Cloud torrent is a a self-hosted remote torrent client, written in Go (golang). You start torrents remotely, which are downloaded as sets of files on the local disk of the server, which are then retrievable or streamable via HTTP.
+  uuid: torrent-0
+  minimum_rancher_version: v0.46.0
+  questions: 
+    - variable: PORT
+      default: 3000
+      label: Public port
+      required: true
+    - variable: DATA
+      label: folder share
+      required: true
+      type: string
